# Magic_Shell_dcbot

./: .breakpoints  .gitignore  README.md  audio_player.py  bot_constant.py  dashboard.py  keep_alive.py  logger.py  main.py  message_handler.py  pyproject.toml  recording.webm  recording2.webm  recording3.webm  replit.nix  test.opus  utils.py
.cache/replit/: __replit_disk_meta.json
.github/: CODEOWNERS
gitbackup/: FETCH_HEAD  config  index  shallow
gitbackup/logs/: HEAD
gitbackup/logs/refs/: stash
gitbackup/logs/refs/heads/: master
gitbackup/logs/refs/remotes/origin/: master
gitbackup/refs/: stash
gitbackup/refs/remotes/origin/: master
static/: index.js
templates/: index.html
